wedding.css
@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Great+Vibes&family=Indie+Flower&family=Parisienne&family=Sacramento&family=Shadows+Into+Light&family=Pacifico&family=Courgette&display=swap");
body{
  margin:0px;
  width:100%;
  height:100%;
}
*{
  margin:0;
}
/* body {
  margin: 0px;
  font-size: 2rem;
  background-color: aliceblue;
}

main{
  
} */
article{
  min-height: 100%;
  min-width:100vw;
  /* padding:15px 9vw 0 9vw; */
  position: relative;
}
p{
  /* font-size:1rem; */
  font-family: 'Courgette',cursive;
}
img{
  width: 100%;
  height: 100%;
  position: absolute;
  /* left:0; */
  z-index:-1;
  object-fit: cover;
}
.photo-overlay{
  width: 100%;
    height: 100%;
    background-color: rgb(40 40 40 / 40%);
    position: absolute;
    left: 0;
    z-index: -1;
}

 #left_date{
  transform-origin: 0 0 ;
  transform: rotate(270deg) translateX(-50%);
  position: fixed;
  /* left:0px; */
  top:50%;
  font-size:1.4rem;
  /* background-color:white; */
  padding:5px 10px;
  border-radius: 0 0 10px 10px;
  z-index: 2;
  color:white;
}

/* start the menu css */
#right_menu{
  width: 100vw;
  height: 100vh;
  position: fixed;
  z-index: 2;
}
#menu-btn{
  /* transform: rotate(270deg) translateY(-57.6vw) translateX(-50%);
  padding:10px 30px;
  border:none;
  border-radius:10px 10px 0px 0px;
  background-color:rgba(0, 128, 128, .7);
  font-family: 'Parisienne';
  font-size:1.5rem;
  color:white; */

}
#menu-items{
  left:0px;
  list-style-type: none;
  top:30vh;
  
}

#menu-items li a {
  text-decoration: none;
  color:white;
  font-family: 'Parisienne';
  font-size: 2rem;
}
#menu-items li {
  padding:10px 0px;
}
.right-float {
  position: fixed;
  right: 0;
  top: 40vh;
}
.menu-list{
  position: fixed;
  right:0;
  height:100vh;
  width:65vw;
  background-color:rgba(0, 128, 128, .8);
}
.open{
  transform:translateX(0);
}
.btn{
  transform: rotate(270deg) translateY(0) translateX(-50%);
  padding:10px 30px;
  border:none;
  border-radius:10px 10px 0px 0px;
  background-color:rgba(0, 128, 128, .8);
  font-family: 'Parisienne';
  font-size:1.5rem;
  color:white;

}
.btn-open{
  transform: rotate(270deg) translateY(-57.6vw) translateX(-50%);
}
/* end the menu css */

#heading-text{
  position: absolute;
  top:50%;
  left:50%;
  transform: translateY(-50%) translateX(-25%);
}

#grabber{
  font-weight: 900;
  /* font-size:10rem; */
}
#couple{
  display:grid;
  grid-template-rows:max-content;
  grid-template-columns:1fr 1fr;
}
.center-text{
  /* padding:0rem .5rem; */
  color:white;
  padding-left: 2.4rem;
    padding-right: .5rem;
}
.title{
  display: block;
  font-size:4rem;
  text-align: center;
  font-family: 'Parisienne',cursive;
  font-weight: 600;
  line-height: 3rem;
  margin-bottom: 2.5rem;
  padding-top: 1rem;
}
.sub-title{
  text-align: center;
  font-size:2rem;
  font-family: 'Parisienne',cursive;
  margin:.6rem 0rem;
}
#meet-sub-title{
  grid-row: 1 / 2;
  grid-column: 1 / 3;
}
/* #wedding-party-title{
  padding-top:10px;
  margin-bottom:30px;
  line-height: 3rem;
} */
#party-list{
  display:grid;
  grid-template-columns: 1fr 1fr;
  grid-gap:20px;
}
.party-title{
  margin-top:-.4rem;
  text-align: center;
}

.name{
  font-size:1.5rem;
  font-family: 'Sacramento';
  text-align: center;
}

#schedule{
  display:grid;
  grid-template-columns: repeat(2,1fr);
}
/*
input[type='checkbox']{
  display:none;
} */

